feat(i18n): setup ngx-translate with language files and add localStorage to save user language preference

--- a/documents/compodoc/dependencies.html
+++ b/documents/compodoc/dependencies.html
@@ -121,6 +121,10 @@
         <li>
             <b>@angular/ssr</b> : ^20.0.3</li>
         <li>
+            <b>@ngx-translate/core</b> : ^16.0.4</li>
+        <li>
+            <b>@ngx-translate/http-loader</b> : ^16.0.1</li>
+        <li>
             <b>express</b> : ^5.1.0</li>
         <li>
             <b>rxjs</b> : ~7.8.0</li>
