--- a/documents/compodoc/coverage.html
+++ b/documents/compodoc/coverage.html
@@ -157,6 +157,18 @@
         <tr class="low">
             <td>
                 <!-- miscellaneous -->
+                        <a href="./miscellaneous/variables.html#httpLoaderFactory">src/app/app.config.ts</a>
+            </td>
+            <td>variable</td>
+            <td>httpLoaderFactory</td>
+            <td align="right" data-sort="0">
+                <span class="coverage-percent">0 %</span>
+                <span class="coverage-count">(0/1)</span>
+            </td>
+        </tr>
+        <tr class="low">
+            <td>
+                <!-- miscellaneous -->
                         <a href="./miscellaneous/variables.html#serverRoutes">src/app/app.routes.server.ts</a>
             </td>
             <td>variable</td>
@@ -175,7 +187,7 @@
             <td>App</td>
             <td align="right" data-sort="0">
                 <span class="coverage-percent">0 %</span>
-                <span class="coverage-count">(0/2)</span>
+                <span class="coverage-count">(0/4)</span>
             </td>
         </tr>
         <tr class="low">
