--- a/documents/compodoc/miscellaneous/variables.html
+++ b/documents/compodoc/miscellaneous/variables.html
@@ -130,6 +130,9 @@
                             <a href="#config" title="src/app/app.config.server.ts" ><b>config</b>&nbsp;&nbsp;&nbsp;(src/.../app.config.server.ts)</a>
                         </li>
                         <li>
+                            <a href="#httpLoaderFactory" title="src/app/app.config.ts" ><b>httpLoaderFactory</b>&nbsp;&nbsp;&nbsp;(src/.../app.config.ts)</a>
+                        </li>
+                        <li>
                             <a href="#reqHandler" title="src/server.ts" ><b>reqHandler</b>&nbsp;&nbsp;&nbsp;(src/.../server.ts)</a>
                         </li>
                         <li>
@@ -259,9 +262,45 @@
   providers: [
     provideBrowserGlobalErrorListeners(),
     provideZoneChangeDetection({ eventCoalescing: true }),
-    provideRouter(routes), provideClientHydration(withEventReplay())
+    provideHttpClient(),
+    provideTranslateService({
+      loader: {
+        provide: TranslateLoader,
+        useFactory: httpLoaderFactory,
+        deps: [HttpClient],
+      },
+    }),
+    provideRouter(routes), 
+    provideClientHydration(withEventReplay())
   ]
 }</code>
+                    </td>
+                </tr>
+
+
+        </tbody>
+    </table>
+    <table class="table table-sm table-bordered">
+        <tbody>
+            <tr>
+                <td class="col-md-4">
+                    <a name="httpLoaderFactory"></a>
+                    <span class="name">
+                        <span ><b>httpLoaderFactory</b></span>
+                        <a href="#httpLoaderFactory"><span class="icon ion-ios-link"></span></a>
+                    </span>
+                </td>
+            </tr>
+                <tr>
+                    <td class="col-md-4">
+                        <i>Type : </i>    <code>TranslateHttpLoader</code>
+
+                    </td>
+                </tr>
+                <tr>
+                    <td class="col-md-4">
+                        <i>Default value : </i><code>(http: HttpClient) &#x3D;&gt;
+    new TranslateHttpLoader(http, &#x27;./i18n/&#x27;, &#x27;.json&#x27;)</code>
                     </td>
                 </tr>
 
