refactor(rad): apply model transformation and align source code for consistency

--- a/documents/compodoc/injectables/LanguageService.html
+++ b/documents/compodoc/injectables/LanguageService.html
@@ -145,7 +145,7 @@ and persists the user&#39;s choice in localStorage.</p>
                         <ul class="index-list">
                             <li>
                                     <span class="modifier">Protected</span>
-                                <a href="#currentLang" >currentLang</a>
+                                <a href="#currentLanguage" >currentLanguage</a>
                             </li>
                             <li>
                                     <span class="modifier">Protected</span>
@@ -447,11 +447,11 @@ mapped to the &quot;language.model&quot; (source code domain).</li>
         <tbody>
             <tr>
                 <td class="col-md-4">
-                    <a name="currentLang"></a>
+                    <a name="currentLanguage"></a>
                     <span class="name">
                             <span class="modifier">Protected</span>
-                        <span ><b>currentLang</b></span>
-                        <a href="#currentLang"><span class="icon ion-ios-link"></span></a>
+                        <span ><b>currentLanguage</b></span>
+                        <a href="#currentLanguage"><span class="icon ion-ios-link"></span></a>
                     </span>
                 </td>
             </tr>
@@ -562,7 +562,7 @@ export class LanguageService {
    * @protected
    * @type {string}
    */
-  protected currentLang &#x3D; this.languages[0].getCode();       // The code of the active language
+  protected currentLanguage &#x3D; this.languages[0].getCode();       // The code of the active language
 
   /**
    * Creates an instance of LanguageService.
@@ -580,13 +580,13 @@ export class LanguageService {
     }
 
     // Step 2: If no language is stored, default to &#x27;en&#x27;
-    this.currentLang &#x3D; storedLang || this.currentLang;
+    this.currentLanguage &#x3D; storedLang || this.currentLanguage;
 
     // Step 3: Initialize the translation service
     let languageCodes &#x3D; this.languages.map(lang &#x3D;&gt; lang.getCode());   // List of language codes
     this.translate.addLangs(languageCodes);                           // Add available languages to the translation service
     this.translate.setDefaultLang(&#x27;en&#x27;);                              // Default language, fallback if nothing else matches
-    this.translate.use(this.currentLang);
+    this.translate.use(this.currentLanguage);
 
     // Step 4: Set the browser title based on the current language
     let title &#x3D; this.translate.instant(&#x27;app.title&#x27;);
@@ -600,7 +600,7 @@ export class LanguageService {
    * @returns {Language} The active language entity.
    */
   public getCurrentLanguage(): Language {
-    return this.languages.find(lang &#x3D;&gt; lang.getCode() &#x3D;&#x3D;&#x3D; this.currentLang)!;
+    return this.languages.find(lang &#x3D;&gt; lang.getCode() &#x3D;&#x3D;&#x3D; this.currentLanguage)!;
   }
 
   /**
@@ -624,15 +624,15 @@ export class LanguageService {
   public changeLanguage(lang: Language): void {  
     
     // Step 1: Update the current language
-    this.currentLang &#x3D; lang.getCode();
+    this.currentLanguage &#x3D; lang.getCode();
 
     // Step 2: Store the new language in localStorage (only in browser)
     if (typeof window !&#x3D;&#x3D; &#x27;undefined&#x27; &amp;&amp; window.localStorage) {
-      localStorage.setItem(&#x27;lang&#x27;, this.currentLang);
+      localStorage.setItem(&#x27;lang&#x27;, this.currentLanguage);
     }
     
     // Step 3: Use the new language in the translation service
-    this.translate.use(this.currentLang);
+    this.translate.use(this.currentLanguage);
 
     // Step 4: Set the browser title based on the current language
     let title &#x3D; this.translate.instant(&#x27;app.title&#x27;);
