--- a/documents/compodoc/coverage.html
+++ b/documents/compodoc/coverage.html
@@ -178,16 +178,16 @@
                 <span class="coverage-count">(0/1)</span>
             </td>
         </tr>
-        <tr class="very-good">
+        <tr class="low">
             <td>
                 <!-- miscellaneous -->
                 <a href="./components/App.html">src/app/app.ts</a>
             </td>
             <td>component</td>
             <td>App</td>
-            <td align="right" data-sort="100">
-                <span class="coverage-percent">100 %</span>
-                <span class="coverage-count">(1/1)</span>
+            <td align="right" data-sort="25">
+                <span class="coverage-percent">25 %</span>
+                <span class="coverage-count">(1/4)</span>
             </td>
         </tr>
         <tr class="very-good">
