feat(theme): add Theme model to represent available themes and structure

--- a/documents/compodoc/coverage.html
+++ b/documents/compodoc/coverage.html
@@ -178,16 +178,16 @@
                 <span class="coverage-count">(0/1)</span>
             </td>
         </tr>
-        <tr class="low">
+        <tr class="very-good">
             <td>
                 <!-- miscellaneous -->
                 <a href="./components/App.html">src/app/app.ts</a>
             </td>
             <td>component</td>
             <td>App</td>
-            <td align="right" data-sort="25">
-                <span class="coverage-percent">25 %</span>
-                <span class="coverage-count">(1/4)</span>
+            <td align="right" data-sort="100">
+                <span class="coverage-percent">100 %</span>
+                <span class="coverage-count">(8/8)</span>
             </td>
         </tr>
         <tr class="very-good">
@@ -212,6 +212,18 @@
             <td align="right" data-sort="100">
                 <span class="coverage-percent">100 %</span>
                 <span class="coverage-count">(8/8)</span>
+            </td>
+        </tr>
+        <tr class="very-good">
+            <td>
+                <!-- miscellaneous -->
+                <a href="./classes/Theme.html">src/app/core/theming/theme.model.ts</a>
+            </td>
+            <td>class</td>
+            <td>Theme</td>
+            <td align="right" data-sort="100">
+                <span class="coverage-percent">100 %</span>
+                <span class="coverage-count">(10/10)</span>
             </td>
         </tr>
         <tr class="very-good">
