feat(theme): add ThemeService for managing theme state and persistence, and ThemeSwitcher component

--- a/documents/compodoc/coverage.html
+++ b/documents/compodoc/coverage.html
@@ -187,7 +187,7 @@
             <td>App</td>
             <td align="right" data-sort="100">
                 <span class="coverage-percent">100 %</span>
-                <span class="coverage-count">(8/8)</span>
+                <span class="coverage-count">(1/1)</span>
             </td>
         </tr>
         <tr class="very-good">
@@ -229,10 +229,34 @@
         <tr class="very-good">
             <td>
                 <!-- miscellaneous -->
+                <a href="./injectables/ThemeService.html">src/app/core/theming/theme.service.ts</a>
+            </td>
+            <td>injectable</td>
+            <td>ThemeService</td>
+            <td align="right" data-sort="100">
+                <span class="coverage-percent">100 %</span>
+                <span class="coverage-count">(8/8)</span>
+            </td>
+        </tr>
+        <tr class="very-good">
+            <td>
+                <!-- miscellaneous -->
                 <a href="./components/LanguageSwitcher.html">src/app/shared/components/language-switcher/language-switcher.ts</a>
             </td>
             <td>component</td>
             <td>LanguageSwitcher</td>
+            <td align="right" data-sort="100">
+                <span class="coverage-percent">100 %</span>
+                <span class="coverage-count">(6/6)</span>
+            </td>
+        </tr>
+        <tr class="very-good">
+            <td>
+                <!-- miscellaneous -->
+                <a href="./components/ThemeSwitcher.html">src/app/shared/components/theme-switcher/theme-switcher.ts</a>
+            </td>
+            <td>component</td>
+            <td>ThemeSwitcher</td>
             <td align="right" data-sort="100">
                 <span class="coverage-percent">100 %</span>
                 <span class="coverage-count">(6/6)</span>
