--- a/documents/compodoc/overview.html
+++ b/documents/compodoc/overview.html
@@ -93,7 +93,7 @@
             <div class="card text-center">
                 <div class="card-block">
                     <h4 class="card-title"><span class="icon ion-md-cog"></span></h4>
-                    <p class="card-text">2 Components</p>
+                    <p class="card-text">3 Components</p>
                 </div>
             </div>
         </div>
@@ -101,7 +101,7 @@
             <div class="card text-center">
                 <div class="card-block">
                     <h4 class="card-title"><span class="icon ion-md-arrow-round-down"></span></h4>
-                    <p class="card-text">1 Injectable</p>
+                    <p class="card-text">2 Injectables</p>
                 </div>
             </div>
         </div>
