feat(resume): create resume subsystem with model, service, and component

--- a/documents/compodoc/coverage.html
+++ b/documents/compodoc/coverage.html
@@ -217,6 +217,30 @@
         <tr class="very-good">
             <td>
                 <!-- miscellaneous -->
+                <a href="./classes/Resume.html">src/app/core/resume/resume.model.ts</a>
+            </td>
+            <td>class</td>
+            <td>Resume</td>
+            <td align="right" data-sort="100">
+                <span class="coverage-percent">100 %</span>
+                <span class="coverage-count">(10/10)</span>
+            </td>
+        </tr>
+        <tr class="very-good">
+            <td>
+                <!-- miscellaneous -->
+                <a href="./injectables/ResumeService.html">src/app/core/resume/resume.service.ts</a>
+            </td>
+            <td>injectable</td>
+            <td>ResumeService</td>
+            <td align="right" data-sort="100">
+                <span class="coverage-percent">100 %</span>
+                <span class="coverage-count">(5/5)</span>
+            </td>
+        </tr>
+        <tr class="very-good">
+            <td>
+                <!-- miscellaneous -->
                 <a href="./classes/Theme.html">src/app/core/theming/theme.model.ts</a>
             </td>
             <td>class</td>
@@ -236,6 +260,18 @@
             <td align="right" data-sort="100">
                 <span class="coverage-percent">100 %</span>
                 <span class="coverage-count">(8/8)</span>
+            </td>
+        </tr>
+        <tr class="very-good">
+            <td>
+                <!-- miscellaneous -->
+                <a href="./components/DownloadResumeButton.html">src/app/shared/components/download-resume-button/download-resume-button.ts</a>
+            </td>
+            <td>component</td>
+            <td>DownloadResumeButton</td>
+            <td align="right" data-sort="100">
+                <span class="coverage-percent">100 %</span>
+                <span class="coverage-count">(3/3)</span>
             </td>
         </tr>
         <tr class="very-good">
